laborations/lab2/testsuite/good/arg_mutation_ass.cc
void cdec(int c) {
  c--;
}

int main () {
  int c;
  cdec(c = 0);
  printInt(c);

  return 0;
}
