laborations/lab2/testsuite/bad/bad/fun_overload.cc
void u() {}
void u(int u) {}
int main() { return 0; }
